<atualizacao> Role enum + fix admin login (SecurityConfig, TokenService, AdminController)